# laughing-couscous

./: .dockerignore  .env.example  .flake8  .gitattributes  .gitignore  .pylintrc  Dockerfile  Dockerfile.test  LICENSE  README.md  app.py  docker-build.sh  docker-compose.yml  docker-run.sh  docker-stop.sh  fix_pylint.sh  pyproject.toml  requirements.txt  ruff.toml  setup-cicd.sh  user_favorites.json
.github/workflows/: ci.yml  deploy.yml  health-check.yml  release.yml
notebooks/: analyze_data.ipynb  eda_bivariate.ipynb  eda_categorical.ipynb  eda_complexity.ipynb  eda_nutrition_profiles.ipynb  eda_temporal.ipynb  eda_text_analysis.ipynb  eda_topic_modeling.ipynb
scripts/: cache_bert_embeddings.py  compare_all_recommenders.py  compare_recommenders.py  test_hybrid_weights.py
src/recipe_recommender/: __init__.py  app.py  app_v2.py  config.py
src/recipe_recommender/data/: __init__.py  data_loader.py
src/recipe_recommender/models/: __init__.py  bert_recommender.py  hybrid_recommender.py  recipe.py  recommender.py
src/recipe_recommender/utils/: __init__.py  cache_manager.py  favorites.py  filters.py  logger.py  nutrition.py  nutrition_filters.py
tests/: conftest.py  test_app.py  test_app_integration.py  test_bert_recommender.py  test_cache_manager.py  test_config.py  test_data_loader.py  test_favorites.py  test_favorites_extended.py  test_favorites_extra.py  test_filters.py  test_hybrid_recommender.py  test_logger.py  test_logger_extra.py  test_nutrition.py  test_nutrition.py.skip  test_nutrition_extended.py.skip  test_nutrition_filters.py  test_recipe.py  test_recommender.py  test_tabs_handler.py
