[tool.poetry]
name = "recipe-recommender"
version = "0.1.0"
description = "Recipe Recommender"
authors = ["tealamenta"]

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.29.0"
pandas = "^2.1.0"
scikit-learn = "^1.3.0"
numpy = "^1.26.0"
matplotlib = "^3.8.0"
python-dotenv = "^1.0.0"
sentence-transformers = "^5.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.12.0"
radon = "^6.0.0"
pylint = "^3.0.0"
flake8 = "^7.3.0"
mypy = "^1.18.2"
autoflake = "^2.3.1"
autopep8 = "^2.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
